# POS_Semestralka

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  README.md  game.cpp  game.h  main.c  main.cpp  my_socket.cpp
Game/: Figurka.cpp  Figurka.h  Game.cpp  Game.h  HraciaPlocha.cpp  HraciaPlocha.h  Kocka.cpp  Kocka.h  Player.cpp  Player.h  Policko.cpp  Policko.h  game.cpp  game.h  main.cpp  main.h
Socket_Server/: linked_list.h  main.c  main.cpp
socket_client/: CMakeLists.txt  main.cpp
socket_server/: CMakeLists.txt  main.cpp
